--- a/src/Pages/Account/style.scss
+++ b/src/Pages/Account/style.scss
@@ -14,3 +14,39 @@
     height: 18rem;
   }
 }
+.white-card-cont{
+  padding: 3rem;
+  background-color: $white;
+  width: 90vw;
+  padding: 1rem;
+  margin: 3rem;
+  border-radius: 9px;
+  img{
+    height: 9rem;
+  }
+}
+.file {
+    opacity: 0;
+    width: 0.1px;
+    height: 0.1px;
+    position: absolute;
+  }
+  .file-input{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    color: #fff;
+    font-weight: bold;
+       label {
+        display: block;
+        width: 200px;
+        height: 50px;
+        border-radius: 25px;
+        background: linear-gradient(40deg, #ff6ec4, #7873f5);
+        box-shadow: 0 4px 7px rgba(0, 0, 0, 0.4);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        transition: transform .2s ease-out;
+  }}
